<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="9pt"
        android:textStyle="bold"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="6"
        android:columnCount="2"
        android:gravity="center"  >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chandlerpreview"
            android:background="@null"
            android:id="@+id/chandler"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onPickFriend"
            android:contentDescription="@string/chandler_description"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/joeypreview"
            android:background="@null"
            android:id="@+id/joey"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onPickFriend"
            android:contentDescription="@string/joey_description"/>

        <TextView android:text="@string/chandler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chandlername"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"/>

        <TextView android:text="@string/joey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/joeyname"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/monicapreview"
            android:background="@null"
            android:id="@+id/monica"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onPickFriend"
            android:contentDescription="@string/monica_description"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phoebepreview"
            android:background="@null"
            android:id="@+id/phoebe"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onPickFriend"
            android:contentDescription="@string/phoebe_description"/>

        <TextView android:text="@string/monica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/monicaname"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"/>

        <TextView android:text="@string/phoebe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoebename"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rachelpreview"
            android:background="@null"
            android:id="@+id/rachel"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onPickFriend"
            android:contentDescription="@string/rachel_description"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rosspreview"
            android:background="@null"
            android:id="@+id/ross"
            android:layout_margin="20dp"
            android:layout_marginBottom="5dp"
            android:onClick="onPickFriend"
            android:contentDescription="@string/ross_description"/>

        <TextView android:text="@string/rachel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rachelname"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"/>

        <TextView android:text="@string/ross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rossname"
            android:textSize="7pt"
            android:layout_marginLeft="20dp"/>



    </GridLayout>
</LinearLayout>
